# co-cog

./: .gitignore  DECISIONS.md  README.md  build.gradle.kts  config.yaml  pyproject.toml  requirements.txt  settings.gradle.kts
.steward/: metrics.jsonl
android/: .gitignore  gradlew  settings.gradle.kts
android-assistant/: gradle.properties  settings.gradle.kts
android-assistant/app/: build.gradle.kts
android-assistant/app/src/main/: AndroidManifest.xml
android-assistant/app/src/main/res/layout/: activity_main.xml
android-assistant/app/src/main/res/values/: strings.xml  themes.xml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  styles.xml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/cocog/capture/: CaptureServiceTest.kt  ServiceHoldsMicrophoneTest.kt  ServiceRefusesHalfPermissionedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: BRIEF-b1-capture.md  DECOMPOSITION-b1.md
gradle/: libs.versions.toml
src/cocog/: __main__.py  config.py  logging_setup.py
src/cocog/client/: __main__.py  audio_capture.py  ws_sender.py
src/cocog/llm/: __init__.py
src/cocog/memory/: __init__.py
src/cocog/server/: __main__.py  audio_buffer.py  transcriber.py  transcript.py  vad.py  ws_receiver.py
tests/: conftest.py  test_audio_buffer.py  test_config.py  test_transcriber.py  test_transcript.py  test_vad.py
(+18 files in other folders)
