[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cocog"
version = "0.1.0"
description = "Co-cognition: a wearable AI assistant prototype"
requires-python = ">=3.11"
license = "GPL-3.0-only"
dependencies = [
    "websockets>=12.0,<14",
    "faster-whisper>=1.0.0,<2",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
client = [
    "sounddevice>=0.4.6,<1",
]
server = [
    "faster-whisper>=1.0.0,<2",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cocog-server = "cocog.server.__main__:main"
cocog-client = "cocog.client.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
